--- a/_notebooks/2023-03-18-APUnit2.4A.ipynb
+++ b/_notebooks/2023-03-18-APUnit2.4A.ipynb
@@ -478,26 +478,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OperationalError",
-     "evalue": "table players already exists",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[1;32m/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb Cell 15\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m c \u001b[39m=\u001b[39m conn\u001b[39m.\u001b[39mcursor()\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# create table for players\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m c\u001b[39m.\u001b[39;49mexecute(\u001b[39m'''\u001b[39;49m\u001b[39mCREATE TABLE players\u001b[39;49m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39m             (id INTEGER PRIMARY KEY,\u001b[39;49m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m             name TEXT,\u001b[39;49m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m             sport TEXT,\u001b[39;49m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39m             team TEXT,\u001b[39;49m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39m             age INTEGER)\u001b[39;49m\u001b[39m'''\u001b[39;49m)\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39m# create table for teams\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=15'>16</a>\u001b[0m c\u001b[39m.\u001b[39mexecute(\u001b[39m'''\u001b[39m\u001b[39mCREATE TABLE teams\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39m             (id INTEGER PRIMARY KEY,\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39m             name TEXT,\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39m             sport TEXT,\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=19'>20</a>\u001b[0m \u001b[39m             city TEXT)\u001b[39m\u001b[39m'''\u001b[39m)\n",
-      "\u001b[0;31mOperationalError\u001b[0m: table players already exists"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sqlite3\n",
     "\n",
     "# create connection object and cursor\n",
-    "conn = sqlite3.connect('files/sports.db')\n",
+    "conn = sqlite3.connect('files/sqlite.db')\n",
     "c = conn.cursor()\n",
     "\n",
     "# create table for players\n",
@@ -548,7 +536,7 @@
     "\n",
     "def create_player(name, sport, team, age):\n",
     "    # connect to database\n",
-    "    conn = sqlite3.connect('files/sports.db')\n",
+    "    conn = sqlite3.connect('files/sqlite.db')\n",
     "    c = conn.cursor()\n",
     "\n",
     "    # insert new player data\n",
@@ -592,7 +580,7 @@
     "\n",
     "def read_players():\n",
     "    # connect to database\n",
-    "    conn = sqlite3.connect('files/sports.db')\n",
+    "    conn = sqlite3.connect('files/sqlite.db')\n",
     "    c = conn.cursor()\n",
     "\n",
     "    # select all players from the players table\n",
@@ -628,7 +616,7 @@
     "\n",
     "def update_player_age(name, new_age):\n",
     "    # connect to database\n",
-    "    conn = sqlite3.connect('files/sports.db')\n",
+    "    conn = sqlite3.connect('files/sqlite.db')\n",
     "    c = conn.cursor()\n",
     "\n",
     "    # update player age\n",
@@ -660,7 +648,7 @@
     "\n",
     "def delete_player(name):\n",
     "    # connect to database\n",
-    "    conn = sqlite3.connect('files/sports.db')\n",
+    "    conn = sqlite3.connect('files/sqlite.db')\n",
     "    c = conn.cursor()\n",
     "\n",
     "    # delete player\n",
