--- a/_notebooks/2023-03-27-Projectplan.ipynb
+++ b/_notebooks/2023-03-27-Projectplan.ipynb
@@ -71,6 +71,30 @@
     "Amazon DynamoDB:\n",
     "Amazon DynamoDB is a NoSQL database that can handle large amounts of data and is designed for scalability and high availability."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# AWS Databases"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Amazon Web Services (AWS) provides a range of database services to meet various data storage and processing needs. Some of the popular AWS databases are:\n",
+    "\n",
+    "Amazon Relational Database Service (RDS): It provides fully managed relational databases, such as MySQL, PostgreSQL, Oracle, SQL Server, and Amazon Aurora.\n",
+    "\n",
+    "Amazon DynamoDB: It is a fully managed NoSQL database service that provides high performance, scalability, and automatic scaling of throughput capacity.\n",
+    "\n",
+    "Amazon Neptune: It is a fully managed graph database service that enables you to store and query highly connected data sets.\n",
+    "\n",
+    "Amazon DocumentDB: It is a fully managed document database service that is compatible with MongoDB workloads"
+   ]
   }
  ],
  "metadata": {
