--- a/_notebooks/2023-03-27-Projectplan.ipynb
+++ b/_notebooks/2023-03-27-Projectplan.ipynb
@@ -42,6 +42,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "\n",
+    "conn = sqlite3.connect('example.db')\n",
+    "c = conn.cursor()\n",
+    "\n",
+    "# create table\n",
+    "c.execute('''CREATE TABLE stocks\n",
+    "             (date text, symbol text, price real)''')\n",
+    "\n",
+    "# insert data\n",
+    "c.execute(\"INSERT INTO stocks VALUES ('2022-03-27', 'AAPL', 133.52)\")\n",
+    "\n",
+    "# save changes\n",
+    "conn.commit()\n",
+    "\n",
+    "# query data\n",
+    "for row in c.execute('SELECT * FROM stocks'):\n",
+    "    print(row)\n",
+    "\n",
+    "conn.close()\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
