--- a/_notebooks/2023-03-29-DS-hashmaps.ipynb
+++ b/_notebooks/2023-03-29-DS-hashmaps.ipynb
@@ -313,8 +313,8 @@
    "source": [
     "## Hacks\n",
     "\n",
-    "- Answer *ALL* questions in the code segments(done)\n",
-    "- Create a diagram or comparison illustration (Canva).\n",
+    "- Answer *ALL* questions in the code segments **(done)**\n",
+    "- Create a diagram or comparison illustration (Canva). **(DONE)**\n",
     "    - What are the pro and cons of using this data structure? \n",
     "    - Dictionary vs List    \n",
     "![image.png](attachment:image.png)\n",
