--- a/_notebooks/2023-03-29-DS-hashmaps.ipynb
+++ b/_notebooks/2023-03-29-DS-hashmaps.ipynb
@@ -261,13 +261,11 @@
     "#    print(str(k) + \": \" + str(v))\n",
     "\n",
     "# Write your own code to print tracks in readable format\n",
-    "# Accessing and printing the album information\n",
     "print(\"Album Title: \" + lover_album[\"title\"])\n",
     "print(\"Artist: \" + lover_album[\"artist\"])\n",
     "print(\"Year: \" + str(lover_album[\"year\"]))\n",
     "print(\"Genre: \" + \", \".join(lover_album[\"genre\"]))\n",
     "\n",
-    "# Accessing and printing the track list\n",
     "print(\"\\nTrack List:\")\n",
     "for track_number, track_title in lover_album[\"tracks\"].items():\n",
     "    print(str(track_number) + \". \" + track_title)\n"
@@ -318,15 +316,23 @@
     "    - What are the pro and cons of using this data structure? \n",
     "    - Dictionary vs List    \n",
     "![image.png](attachment:image.png)\n",
-    "- Expand upon the code given to you, possible improvements in comments\n",
-    "- Build your own album showing features of a python dictionary\n",
+    "- Expand upon the code given to you, possible improvements in comments  \n",
+    "- Build your own album showing features of a python dictionary **Done**\n",
     "\n",
-    "- For Mr. Yeung's class: Justify your favorite Taylor Swift song, answer may effect seed"
+    "- For Mr. Yeung's class: Justify your favorite Taylor Swift song, answer may effect seed **Done**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Album"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -339,6 +345,7 @@
     }
    ],
    "source": [
+    "\n",
     "my_turn = {\n",
     "    \"title\": \"My Turn\",\n",
     "    \"artist\": \"Lil Baby\",\n",
@@ -422,11 +429,6 @@
     "The best Taylor swift song is Bad Blood. Swift wrote \"Bad Blood\" about an undisclosed female musician. She revealed in a 2014 interview with Rolling Stone that this female peer, whom she had thought of as a close friend of hers, attempted to sabotage one of her concert tours by hiring people who worked for her.\n",
     "According to Washington Post: The background of Bad Blood is explained, the fued between Katy Perry and Taylor Swift:https://www.washingtonpost.com/news/arts-and-entertainment/wp/2015/05/17/what-taylor-swifts-bad-blood-music-video-actually-says-about-power-in-hollywood/"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
