--- a/_notebooks/2023-03-29-DS-hashmaps.ipynb
+++ b/_notebooks/2023-03-29-DS-hashmaps.ipynb
@@ -323,6 +323,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -425,9 +430,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Best Taylor Swift Song\n",
-    "The best Taylor swift song is Bad Blood. Swift wrote \"Bad Blood\" about an undisclosed female musician. She revealed in a 2014 interview with Rolling Stone that this female peer, whom she had thought of as a close friend of hers, attempted to sabotage one of her concert tours by hiring people who worked for her.\n",
-    "According to Washington Post: The background of Bad Blood is explained, the fued between Katy Perry and Taylor Swift:https://www.washingtonpost.com/news/arts-and-entertainment/wp/2015/05/17/what-taylor-swifts-bad-blood-music-video-actually-says-about-power-in-hollywood/"
+    "Dhruva's Favorite Taylor Swift Song\n",
+    "Blank Space\n",
+    "The song is so good. It it about love, and how it sometimes ends very badly, even though it's fun and exciting at first."
    ]
   }
  ],
