--- a/_notebooks/2023-04-25-P4Y-SASSGuide.ipynb
+++ b/_notebooks/2023-04-25-P4Y-SASSGuide.ipynb
@@ -74,7 +74,7 @@
     "- you can change the look for different devices ex: phone and computer \n",
     "\n",
     "### Describe/Explain one of the more \"advanced\" SASS properties below in detail:\n",
-    "- One advanced SASS property is animation, which can let you rotate a picture as you want.\n",
+    "- One advanced SASS property is animation, which can let you rotate a picture as you want. This can be used \n",
     "- \n",
     "\n",
     "## [Link to Number Guesser Game](https://anicricket.github.io/tmv4/_pages/numberguesser_v3.html)\n",
