--- a/_notebooks/2023-04-05-Unit4review.ipynb
+++ b/_notebooks/2023-04-05-Unit4review.ipynb
@@ -286,6 +286,19 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scores:\n",
+    "SASS: 0.9/1\n",
+    "Simulations: 0.9/1\n",
+    "Quiz: 1/1\n",
+    "Data Analysis: 0.9/1\n",
+    "Binary Math: 0.99/1"
+   ]
   }
  ],
  "metadata": {
