--- a/_notebooks/2023-05-15-DS-sorting.ipynb
+++ b/_notebooks/2023-05-15-DS-sorting.ipynb
@@ -284,6 +284,94 @@
     "        bubbleSort(list_of_people, key)  # sort list of people\n",
     "        print(list_of_people)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hacks DONE\n",
+    "\n",
+    "Is a list and/or dictionary in Python considered a primitive or collection type? Why?\n",
+    "In Python, a list and dictionary are considered collection types rather than primitive types. Primitive types in Python include integers, floats, booleans, and strings. Collection types, on the other hand, are containers that can hold multiple values or objects. Lists are ordered, mutable collections, while dictionaries are unordered, mutable collections that store key-value pairs. They provide more complex data structures compared to primitive types and allow for more versatile data storage and manipulation.\n",
+    "\n",
+    "Is the list passed into bubble sort \"pass-by-value\" or \"pass-by-reference\"? Describe why in relation to the output.\n",
+    "In Python, when a list is passed into the bubble sort function, it is passed by reference. This means that changes made to the list within the function will affect the original list outside the function.\n",
+    "\n",
+    "In the given code, the bubbleSort function operates directly on the list passed to it as an argument. When swaps are made within the function using list[j], list[j + 1] = list[j + 1], list[j], the original list is modified. As a result, when the modified list is printed outside the function, you can observe the sorted list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bubble Sort\n",
+      "name\n",
+      "[{'name': 'Alice', 'age': 25, 'city': 'London'}, {'name': 'Bob', 'age': 32, 'city': 'New York'}, {'name': 'Charlie', 'age': 19, 'city': 'San Francisco'}, {'name': 'David', 'age': 41, 'city': 'Paris'}]\n",
+      "age\n",
+      "[{'name': 'Charlie', 'age': 19, 'city': 'San Francisco'}, {'name': 'Alice', 'age': 25, 'city': 'London'}, {'name': 'Bob', 'age': 32, 'city': 'New York'}, {'name': 'David', 'age': 41, 'city': 'Paris'}]\n",
+      "city\n",
+      "[{'name': 'Alice', 'age': 25, 'city': 'London'}, {'name': 'Bob', 'age': 32, 'city': 'New York'}, {'name': 'David', 'age': 41, 'city': 'Paris'}, {'name': 'Charlie', 'age': 19, 'city': 'San Francisco'}]\n",
+      "Selection Sort\n",
+      "[{'name': 'John', 'age': 63, 'city': 'Eugene'}, {'name': 'Risa', 'age': 18, 'city': 'New York'}, {'name': 'Ryan', 'age': 21, 'city': 'Los Angeles'}, {'name': 'Shekar', 'age': 18, 'city': 'San Francisco'}]\n",
+      "Sorted List with Key First\n",
+      "John 63 Eugene\n",
+      "Risa 18 New York\n",
+      "Ryan 21 Los Angeles\n",
+      "Shekar 18 San Francisco\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Selection Sort Algorithm\n",
+    "def selectionSort(arr, key):\n",
+    "    n = len(arr)\n",
+    "\n",
+    "    for i in range(n - 1):\n",
+    "        min_idx = i\n",
+    "        for j in range(i + 1, n):\n",
+    "            if arr[j].get(key) < arr[min_idx].get(key):\n",
+    "                min_idx = j\n",
+    "        arr[i], arr[min_idx] = arr[min_idx], arr[i]\n",
+    "\n",
+    "    return arr\n",
+    "\n",
+    "# Create your own list\n",
+    "my_list = [\n",
+    "    {\"name\": \"Alice\", \"age\": 25, \"city\": \"London\"},\n",
+    "    {\"name\": \"Bob\", \"age\": 32, \"city\": \"New York\"},\n",
+    "    {\"name\": \"Charlie\", \"age\": 19, \"city\": \"San Francisco\"},\n",
+    "    {\"name\": \"David\", \"age\": 41, \"city\": \"Paris\"}\n",
+    "]\n",
+    "\n",
+    "# Test your list with the bubble sort\n",
+    "print(\"Bubble Sort\")\n",
+    "for key in my_list[0]:\n",
+    "    print(key)\n",
+    "    bubbleSort(my_list, key)\n",
+    "    print(my_list)\n",
+    "\n",
+    "# Test my list with your new sort (Selection Sort)\n",
+    "print(\"Selection Sort\")\n",
+    "sorted_list = selectionSort(list_of_people, \"name\")\n",
+    "print(sorted_list)\n",
+    "\n",
+    "# Research analysis on sorting: comparisons, swaps, time\n",
+    "# Sorting algorithms have different performance characteristics in terms of comparisons and swaps.\n",
+    "# The bubble sort has a time complexity of O(n^2) in the average and worst case scenarios.\n",
+    "# It performs n-1 comparisons in the first pass, n-2 in the second, and so on, resulting in (n-1) + (n-2) + ... + 1 = n(n-1)/2 comparisons.\n",
+    "# The number of swaps depends on the input and can vary from 0 (already sorted) to n(n-1)/2 (in reverse order).\n",
+    "\n",
+    "# Find a better way to print the data, key first, then other elements in viewable form\n",
+    "print(\"Sorted List with Key First\")\n",
+    "for item in sorted_list:\n",
+    "    print(item[\"name\"], item[\"age\"], item[\"city\"])\n"
+   ]
   }
  ],
  "metadata": {
