final commits of the year

--- a/_notebooks/2023-06-02-N@TM.ipynb
+++ b/_notebooks/2023-06-02-N@TM.ipynb
@@ -46,6 +46,16 @@
     "Now my last stop was the digital media production room where I saw the paintings made by the students. As I looked across the wall, what I saw was magnficent because of how they were able to be so creative and how the pictures were great fits for the theme. There is also a video to go with the photo, and the photos were doing a good job of being great thumbnails. \n",
     "![image.png](attachment:image-4.png)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reflection\n",
+    "\n",
+    "Overall the project this trimester went well, I was able to do a lot and had a fun time working with my group. This trimester I picked up new skills such as javascript coding. I also picked up how to use animataion in coding, with the sprites which was something I was always interested in learning. Another great skill I learned was linking backend and frontend which is something that blew my mind when I did, and took lots of work to fully accomplish. The highs from this year were night at the museum because we were done with the project, the lows were the middle of the year because it was a lot of work and we were very disorganized as a group. In Compsci I plan to continue doing coding projects outside of school so that I can maintain the skills i have picked up this year. I plan to go to college for Computer science however I don't think I will be taking APCSA in the future at Del Norte. \n"
+   ]
   }
  ],
  "metadata": {
