--- a/_notebooks/2023-09-19-PBL-javascript_tutorial.ipynb
+++ b/_notebooks/2023-09-19-PBL-javascript_tutorial.ipynb
@@ -68,7 +68,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "element.append(\"Hello .\");\n\n// Browser Console output; debugging or tracing\nelement.append(\" I am not taking APCSA next year. I like coding.\");\n\n",
+      "application/javascript": "element.append(\"Hi .\");\n\n// Browser Console output; debugging or tracing\nelement.append(\" I am not taking APCSA next year. I like coding.\");\n\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -79,7 +79,7 @@
    ],
    "source": [
     "%%js\n",
-    "element.append(\"Hello .\");\n",
+    "element.append(\"Hi .\");\n",
     "\n",
     "// Browser Console output; debugging or tracing\n",
     "element.append(\" I am not taking APCSA next year. I like coding.\");\n",
