--- a/_notebooks/2023-09-19-PBL-javascript_tutorial.ipynb
+++ b/_notebooks/2023-09-19-PBL-javascript_tutorial.ipynb
@@ -54,6 +54,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "!jt -t chesterish"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -455,6 +468,60 @@
     "      let cellB = rowB.querySelector(`td:nth-child(${getColumnIndex(columnName)})`).innerText;\n",
     "      // the nth-child selector is different from normal JS arrays, these have an index starting at 1 rather than 0\n",
     "      // the rows are sorted based on the column. getColumnIndex is used to get the index of the\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "<html>\n<head>\n  <title>Number Sorter</title>\n  <style>\n    body {\n      font-family: Arial, sans-serif;\n    }\n  </style>\n</head>\n<body>\n  <h1>Number Sorter</h1>\n  \n  <div>\n    <label for=\"number-input\">Enter numbers (comma-separated):</label>\n    <input type=\"text\" id=\"number-input\">\n    <button onclick=\"sortNumbers()\">Sort</button>\n  </div>\n  \n  <div id=\"result\"></div>\n  \n  <script>\n    function sortNumbers() {\n      var input = document.getElementById(\"number-input\").value;\n      var numbers = input.split(\",\").map(Number);\n      var sortedNumbers = numbers.sort(function(a, b) {\n        return a - b;\n      });\n      \n      var result = sortedNumbers.join(\", \");\n      document.getElementById(\"result\").textContent = \"Sorted numbers: \" + result;\n    }\n  </script>\n</body>\n</html>\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%js\n",
+    "<html>\n",
+    "<head>\n",
+    "  <title>Number Sorter</title>\n",
+    "  <style>\n",
+    "    body {\n",
+    "      font-family: Arial, sans-serif;\n",
+    "    }\n",
+    "  </style>\n",
+    "</head>\n",
+    "<body>\n",
+    "  <h1>Number Sorter</h1>\n",
+    "  \n",
+    "  <div>\n",
+    "    <label for=\"number-input\">Enter numbers (comma-separated):</label>\n",
+    "    <input type=\"text\" id=\"number-input\">\n",
+    "    <button onclick=\"sortNumbers()\">Sort</button>\n",
+    "  </div>\n",
+    "  \n",
+    "  <div id=\"result\"></div>\n",
+    "  \n",
+    "  <script>\n",
+    "    function sortNumbers() {\n",
+    "      var input = document.getElementById(\"number-input\").value;\n",
+    "      var numbers = input.split(\",\").map(Number);\n",
+    "      var sortedNumbers = numbers.sort(function(a, b) {\n",
+    "        return a - b;\n",
+    "      });\n",
+    "      \n",
+    "      var result = sortedNumbers.join(\", \");\n",
+    "      document.getElementById(\"result\").textContent = \"Sorted numbers: \" + result;\n",
+    "    }\n",
+    "  </script>\n",
+    "</body>\n",
+    "</html>\n"
    ]
   },
   {
